# qemlib

./: LICENSE  README.md  pyproject.toml
examples/: dd_exp.ipynb  exp_zne.py  pt_exp.ipynb  pt_exp2.ipynb  rem_exp.ipynb  zne_exp.ipynb  zne_exp2.ipynb
qemlib/: __init__.py
qemlib/dd/: __init__.py  dd.py  insertion.py  seq.py
qemlib/pt/: __init__.py  pauli.py  pt.py  runner.py  twirl.py
qemlib/rem/: __init__.py  calibration.py  expectation.py  mitigation.py  rem.py
qemlib/zne/: __init__.py  executor.py  folding.py  functional.py  models.py  plotting.py  zne.py
tests/: test_extrapolation.py  test_folding.py  test_pt.py  test_zne_class.py
